<resources>
    <string name="app_name">SOTA Chaser</string>
    <string name="title_activity_maps">Summit Map</string>
    <string name="association">Association</string>
    <string name="region">Region</string>

    <string name="title_analytics">Analytics Opt-in</string>
    <string name="title_anonymous_usage">Anonymous usage statistics</string>
    <string name="title_crash_reports">Automatically submit crash reports</string>
    <string name="title_changelog">Changelog</string>
    <string name="changelog_text">Updates in this release:\n
\n
<b>Version 0.9 Alpha</b>\n
• Fixed crashes on network errors\n
• Added option to sort summits on name, altitude, distance, and other parameters\n
• Added option to filter summits on zon-zero activation count\n
• Added my location overlay to map views\n
• Added a link to summit details from map tab\n
• \n
\n
<b>Version 0.8.2 Alpha</b>\n
• Show my location on summit detail map\n
• Fixed invalid summit data that was being loaded\n
\n
<b>Version 0.8.1 Alpha</b>\n
• Fixed potential crash when downloading summit data\n
• Ensure latest GPX track data is downloaded\n
• Allow the map type to be selected for normal, satellite, and terrain\n
\n
<b>Version 0.8 Alpha</b>\n
• Map view for uploaded GPX tracks to a summit\n
• Added geo: link integration with Google Maps, Google Earth, and Gaia GPS\n
\n
<b>Version 0.7.2 Alpha</b>\n
• A quick summary of summit data is now loaded first while the full CSV file is downloaded\n
• Fixed issue with multiple downloads happening in parallel\n
\n
<b>Version 0.7.1 Alpha</b>\n
• Fixed issues with API not reloading data correctly\n
\n
<b>Version 0.7 Alpha</b>\n
• Changed summit list to multi-level list\n
• Present many more details on the association and region being viewed\n
• Added filter field to narrow down the association/region/summit\n
• Updated launcher icon\n
• Fixed some possible crashes\n
\n
<b>Version 0.6 Alpha</b>\n
• Fixed possible crash when changing tabs\n
• Automatically downloads latest summit data\n
• SOTA region colorized on map\n
• Markers are now colorized by point scale\n
• Markers show summit name\n
• Older Android phones are now supported\n
• Fixed spinners layout and include assocation/region names\n
\n
<b>Version 0.5 Alpha</b>\n
• Added a details view of each summit with a map for it\n
• Optionally, show distance to summit from current location\n
• Include links to SOTA and SOTLAS websites for a summit\n
\n
<b>Version 0.4 Alpha</b>\n
• Added screen for showing detailed summit info\n
\n
<b>Version 0.3 Alpha</b>\n
• Added opt-in analytics and crash reporting\n
• Added feedback button\n
• Added settings screen\n
• Speed up first load of app\n
\n
<b>Version 0.2 Alpha</b>\n
• Prevent user interface from hanging while loading data\n
• Preserve last location when returning to app\n
\n
<b>Version 0.1 Alpha</b>\n
• First demo release of SOTA Summit Mapping</string>

    <string name="preference_asked_for_consent">asked_for_consent</string>
    <string name="preference_enable_analytics">enable_analytics</string>
    <string name="preference_enable_crash_reports">enable_crash_reports</string>
    <string name="preference_changelog">changelog</string>

    <string name="title_activity_settings">SettingsActivity</string>
    <string name="settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Map</string>
    <string name="title_dashboard">Summit List</string>
    <string name="title_notifications">Notifications</string>

    <string-array name="map_types">
        <item>Roadmap</item>
        <item>Satellite</item>
        <item>Hybrid</item>
        <item>Terrain</item>
    </string-array>
    <string-array name="map_types_values">
        <item>roadmap</item>
        <item>satellite</item>
        <item>hybrid</item>
        <item>terrain</item>
    </string-array>
</resources>
